--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -1,1 +1,10 @@
+$primary: #0d47a1;
+$secondary: #2962ff;
+$success: #1de9b6;
+$info: #448aff;
+$warning: #f49d1a;
+$danger: #dc3545;
+$light: #f8f9fa;
+$dark: #343a40;
+
 @import "../node_modules/bootstrap/scss/bootstrap.scss";
