--- a/client/src/assets/styles/styles.css
+++ b/client/src/assets/styles/styles.css
@@ -1,4 +1,3 @@
-@import url("https://fonts.googleapis.com/css2?family=Anton&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Secular+One&display=swap");
 
 .font {
@@ -27,6 +26,21 @@
   color: white;
   background-color: #fc4f00;
   padding: 5px;
+  text-align: center;
+  border-radius: 5px;
+}
+.bg-orange-btn {
+  border: 1px solid #fc4f00;
+  width: 120px;
+  padding-top: 2px;
+  padding-bottom: 2px;
+  text-align: center;
+  border-radius: 5px;
+}
+.bg-orange-hover-btn:hover {
+  color: white;
+  background-color: #fc4f00;
+  padding: 2px;
   text-align: center;
   border-radius: 5px;
 }
@@ -61,6 +75,7 @@
 }
 .orange {
   color: #fc4f00;
+  font-weight: 600;
 }
 .blue {
   color: #19376d;
@@ -74,4 +89,57 @@
 }
 .text {
   text-align: justify;
+}
+
+.hero {
+  width: 100%;
+  height: auto;
+  background-color: #19376d;
+  border-top-right-radius: 10px;
+  border-top-left-radius: 10px;
+}
+.profile {
+  width: 200px;
+  height: 200px;
+  border-radius: 100%;
+  background-color: #fc4f00;
+  margin-top: -100px;
+  margin-left: 30px;
+}
+.name {
+  font-size: 2rem;
+  font-family: Secular One, sans-serif;
+  margin-top: -80px;
+  margin-left: 300px;
+  padding-bottom: 10px;
+}
+.biodata {
+  font-family: Secular One, sans-serif;
+}
+.sosial-media {
+  width: 30px;
+  height: 30px;
+}
+.info {
+  color: white;
+  width: 150px;
+  height: auto;
+  padding: 10px;
+  background-color: #fc4f00;
+  text-align: center;
+  border-radius: 5px;
+  margin-top: 40px;
+  margin-left: 35%;
+}
+.container-event {
+  width: 1000px;
+  height: auto;
+  align-items: center;
+}
+.text-muted-footer {
+  color: white;
+  font-size: 15px;
+  background-color: #fc4f00;
+  padding-top: 5px;
+  padding-bottom: 5px;
 }
