--- a/client/src/assets/styles/styles.css
+++ b/client/src/assets/styles/styles.css
@@ -26,7 +26,7 @@
 .bg-pink {
   color: white;
   background-color: #e11299;
-  width: 400px;
+  width: 350px;
   padding-top: 10px;
   padding-bottom: 10px;
   text-align: center;
@@ -153,6 +153,29 @@
   width: 1000px;
   height: auto;
   align-items: center;
+}
+
+@media all and (min-width: 320px) and (max-width: 767px) {
+  .container-event {
+    width: 400px;
+    height: auto;
+    align-items: normal;
+  }
+  .profile {
+    width: 200px;
+    height: 200px;
+    border-radius: 100%;
+    background-color: #fc4f00;
+    margin-top: -70px;
+    margin-left: 90px;
+  }
+  .name {
+    font-size: 1.5rem;
+    font-family: Secular One, sans-serif;
+    margin-top: 10px;
+    margin-left: 80px;
+    padding-bottom: 10px;
+  }
 }
 .text-muted-footer {
   color: white;
